Fix Register Section Spacing
Fixed Register Section Spacing

--- a/sass/components/_register.scss
+++ b/sass/components/_register.scss
@@ -4,32 +4,19 @@
 
 // Mobile Styling - Media Query
 
-.register {
-    padding: 1em 0 1em 0;
-}
-
-.register h2 {
-    margin-bottom: 0.5em;
-}
-
-.register .main-description {
-    max-width: 100%;
-    padding-bottom: 1em;
-}
-
 .register-form textarea {
-    padding-bottom: 2em;
-    margin-bottom: 2em;
+    padding-bottom: 2rem;
+    margin-bottom: 2rem;
 }
 
 .register-form input, .register-form textarea {
     font-family: $heading-font-family;
-    font-size: 1em;
+    font-size: 1rem;
 
     width: 100%;
     max-width: none;
-    margin-bottom: 1em;
-    padding: .5em;
+    margin-bottom: 1rem;
+    padding: .5rem;
 
     border: 2px solid $text-color;
     border-radius: 5px;
@@ -44,7 +31,6 @@
     width: 100%;
     max-width: none;
     padding: 5px 0;
-    margin-bottom: 1rem;
 
     font-size: 20px;
     font-family: $heading-font-family;
@@ -68,33 +54,26 @@ input:focus, textarea:focus, select:focus {
     outline: none;
 }
 
+#feedback {
+    margin-bottom: 1.5rem;
+}
+
 // Tablet Styling - Media Query
 
 @media screen and (min-width: 48em) { 
 
-    .register {
-        padding: 1em 0 1em 0;
-    }
-
-    .register .main-description {
-        padding-bottom: 1.25em;
-    }
-
     .register-form textarea {
-        padding-bottom: 1em;
-        margin-bottom: 1em;
-        width: 100%;
+        padding-bottom: 1rem;
+        margin-bottom: 1rem;
     }
 
     .register-form input, .register-form textarea {
-        width: 100%;
         margin-bottom: 0.5rem;
-        padding: 0.5em;
+        padding: 0.5rem;
     }
 
     .register-form input[type="submit"] {
         padding: 5px 0px 5px 0px;
-        width: 100%;
     }
 
     .form-group {
@@ -113,35 +92,26 @@ input:focus, textarea:focus, select:focus {
     .form-group input[type="submit"] {
         flex: 1 1 100%;
     }
+
+    #feedback {
+        margin-bottom: 2.25rem;
+    }
 }
 
 // Desktop Styling - Media Query
 
 @media screen and (min-width: 64em) {
 
-    .register {
-        padding: 1.5em 0 1.5em 0;
-    }
-
-    .register .main-description {
-        font-size: 21.5px;
-    }
-
     .register-form input, .register-form textarea {
         font-size: 24px;
     }
 
-    .register-form input {
-        width: 18.5em;
-    }
-
-    .register-form textarea {
-        width: 38em;
-    }
-
     .register-form input[type="submit"] {
         font-size: 35px;
-        width: 26em;
+    }
+
+    #feedback {
+        margin-bottom: 2.5rem;
     }
 }
 
@@ -149,28 +119,15 @@ input:focus, textarea:focus, select:focus {
 
 @media screen and (min-width: 120em) {
 
-    .register {
-        padding: 1.5em 0 1.5em 0;
-    }
-
-    .register .main-description {
-        font-size: 25px;
-    }
-
     .register-form input, .register-form  textarea {
         font-size: 25px;
     }
 
-    .register-form input {
-        width: 21em;
-    }
-
-    .register-form textarea {
-        width: 94%;
-    }
-
     .register-form input[type="submit"] {
         font-size: 35px;
-        width: 31em;
+    }
+    
+    #feedback {
+        margin-bottom: 3rem;
     }
 }
